--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,37 +1,31 @@
-name: Docker Build and Scan
+name: Pytest with HTML Report
 
 on:
-  workflow_dispatch:   # 👈 allows manual trigger from GitHub UI
-  # push:              # (optional) you can keep/remove push trigger
-  #   branches: [ main ]
-  # pull_request:      # (optional) you can keep/remove PR trigger
-  #   branches: [ main ]
+  workflow_dispatch:   # Run manually from GitHub Actions tab
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          python-version: "3.x"
 
-      - name: Build Docker Image
-        run: docker build -t my-app:latest .
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-html
 
-      - name: Run Trivy Scan
-        uses: aquasecurity/trivy-action@0.14.0
+      - name: Run Pytest with HTML report
+        run: pytest --html=pytest-report.html --self-contained-html
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v4
         with:
-          image-ref: 'my-app:latest'
-          format: 'table'
-          output: 'trivy-report.txt'
-
-      - name: Upload Trivy Report
-        uses: actions/upload-artifact@v3
-        with:
-          name: trivy-report
-          path: trivy-report.txt
+          name: pytest-report
+          path: pytest-report.html
