--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,31 +1,43 @@
-name: Pytest with HTML Report
+name: CI with Trivy Scan
 
 on:
-  workflow_dispatch:   # Run manually from GitHub Actions tab
+  workflow_dispatch:   # 👈 Run manually from GitHub Actions tab
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1️⃣ Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-
-      - name: Install dependencies
+      # 2️⃣ Build Docker image
+      - name: Build Docker image
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest pytest-html
+          IMAGE_NAME=my-app:${{ github.sha }}
+          docker build -t $IMAGE_NAME .
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
-      - name: Run Pytest with HTML report
-        run: pytest --html=pytest-report.html --self-contained-html
+      # 3️⃣ Install Trivy
+      - name: Install Trivy
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget apt-transport-https gnupg lsb-release
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install -y trivy
 
-      - name: Upload test report
+      # 4️⃣ Scan Docker image
+      - name: Run Trivy scan
+        run: |
+          mkdir -p trivy-reports
+          trivy image --severity HIGH,CRITICAL --exit-code 0 --format table -o trivy-reports/report.txt $IMAGE_NAME
+
+      # 5️⃣ Upload Trivy scan report
+      - name: Upload Trivy report artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: pytest-report
-          path: pytest-report.html
+          name: trivy-reports
+          path: trivy-reports/
