--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -30,9 +30,10 @@ jobs:
         run: |
           git clone https://github.com/quay/clair.git
           cd clair
-          docker compose -f local-dev/docker-compose.yml up -d
+          docker compose -f local-dev/docker-compose.yaml up -d
           # wait for Clair API to be ready
           sleep 60
+
 
       - name: Scan image with Clair
         run: |
