added a health check loop until clair api respond

--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -31,17 +31,19 @@ jobs:
           git clone https://github.com/quay/clair.git
           cd clair
           docker compose -f docker-compose.yaml up -d
+          docker ps
 
       - name: Wait for Clair health
         run: |
+          echo "⏳ Waiting for Clair to become healthy..."
           for i in {1..40}; do
-            code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:6060/health)
+            code=$(curl -s -o /dev/null -w "%{http_code}" http://127.0.0.1:6060/health || echo "000")
             if [[ "$code" == "200" ]]; then
               echo "✅ Clair services are healthy!"
               exit 0
             fi
-            echo "⏳ Waiting for Clair health... (status: $code)"
-            sleep 15
+            echo "⏳ Waiting... (status: $code)"
+            sleep 20
           done
           echo "❌ Clair did not become healthy in time" >&2
           exit 1
@@ -49,12 +51,17 @@ jobs:
       - name: Scan image with Clair
         run: |
           clairctl report \
-            --host http://localhost:6060 \
+            --host http://127.0.0.1:6060 \
             -o json ${{ github.event.inputs.image }} \
             > clair-report.json
+          echo "✅ Scan complete. Report saved to clair-report.json"
 
       - name: Upload report artifact
         uses: actions/upload-artifact@v4
         with:
           name: clair-report
           path: clair-report.json
+
+      - name: Show report in logs (optional)
+        run: |
+          cat clair-report.json | jq .
