--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -31,7 +31,10 @@ jobs:
         run: |
           git clone https://github.com/quay/clair.git
           cd clair
+          sed -i 's/- "6060"/- "6060:6060"/' docker-compose.yaml
+          sed -i 's/- "6061"/- "6061:6061"/' docker-compose.yaml
           docker compose -f docker-compose.yaml up -d
+
 
       - name: Wait for Clair health
         run: |
