--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Wait for Clair health
         run: |
           for i in {1..40}; do
-            code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:6060/health)
+            code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:6060/healthz)
             if [[ "$code" == "200" ]]; then
               echo "✅ Clair is healthy!"
               exit 0
