--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -1,89 +1,81 @@
-name: Clair Image Scan
+name: Clair Vulnerability Scan
 
 on:
   workflow_dispatch:
     inputs:
-      mode:
-        description: "Choose scan mode"
+      image-name:
+        description: "Name for the Docker image (e.g., myapp)"
         required: true
-        default: "public"
-        type: choice
-        options:
-          - public   # Scan public image (Docker Hub)
-          - local    # Build & push local/private image to Clair
-      image:
-        description: "Docker image to scan (e.g. nginx:1.25) (used only for public mode)"
+        default: "myapp"
+      image-tag:
+        description: "Tag for the Docker image"
         required: true
-        default: "nginx:latest"
+        default: "latest"
 
 jobs:
-  clair-scan:
+  clair-pipeline:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      # 1️⃣ Checkout source code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Go
+      # 2️⃣ Build Docker image
+      - name: Build Docker image
+        run: |
+          IMAGE=${{ github.event.inputs.image-name }}:${{ github.event.inputs.image-tag }}
+          echo "Building Docker image: $IMAGE"
+          docker build -t $IMAGE .
+
+      # 3️⃣ Install clairctl (client for Clair API)
+      - name: Install clairctl
         uses: actions/setup-go@v5
         with:
           go-version: "1.22"
-
-      - name: Install clairctl
-        run: |
+      - run: |
           go install github.com/quay/clair/v4/cmd/clairctl@latest
           echo "$HOME/go/bin" >> $GITHUB_PATH
 
-      - name: Start Clair (combo mode with Postgres)
+      # 4️⃣ Start Clair in combo mode (API + Indexer + Matcher + Postgres)
+      - name: Start Clair
         run: |
           git clone https://github.com/quay/clair.git
           cd clair
           docker compose -f docker-compose.yaml up -d
 
-      - name: Wait for Clair API
+      # 5️⃣ Wait for Clair matcher to be ready
+      - name: Wait for Matcher
         run: |
-          for i in {1..30}; do
-            if curl -s http://localhost:6060/ > /dev/null; then
-              echo "✅ Clair API is ready!"
+          for i in {1..40}; do
+            if curl -s http://localhost:6060/health/matcher | grep "ok"; then
+              echo "✅ Matcher is ready!"
               exit 0
             fi
-            echo "⏳ Waiting for Clair API..."
-            sleep 20
+            echo "⏳ Waiting for Matcher..."
+            sleep 15
           done
-          echo "❌ Clair API did not start in time" >&2
+          echo "❌ Matcher not ready in time" >&2
           exit 1
 
-      # 🔹 Mode: Public image
-      - name: Scan Public Image
-        if: ${{ github.event.inputs.mode == 'public' }}
+      # 6️⃣ Push the built image to Clair for indexing
+      - name: Push image to Clair
         run: |
-          clairctl report \
-            --host http://localhost:6060 \
-            -o json ${{ github.event.inputs.image }} \
-            > clair-report.json
-
-      # 🔹 Mode: Local/private image
-      - name: Build Local Test Image
-        if: ${{ github.event.inputs.mode == 'local' }}
-        run: |
-          echo -e "FROM alpine:3.19\nRUN apk add curl" > Dockerfile
-          docker build -t localtest:1.0 .
-
-      - name: Push Local Image to Clair
-        if: ${{ github.event.inputs.mode == 'local' }}
-        run: |
+          IMAGE=${{ github.event.inputs.image-name }}:${{ github.event.inputs.image-tag }}
           clairctl push \
             --host http://localhost:6060 \
-            localtest:1.0
+            $IMAGE
 
-      - name: Scan Local Image
-        if: ${{ github.event.inputs.mode == 'local' }}
+      # 7️⃣ Run vulnerability scan
+      - name: Scan image with Clair
         run: |
+          IMAGE=${{ github.event.inputs.image-name }}:${{ github.event.inputs.image-tag }}
           clairctl report \
             --host http://localhost:6060 \
-            -o json localtest:1.0 \
+            -o json $IMAGE \
             > clair-report.json
 
+      # 8️⃣ Upload scan report
       - name: Upload report artifact
         uses: actions/upload-artifact@v4
         with:
