--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -11,39 +11,34 @@ on:
 jobs:
   clair-scan:
     runs-on: ubuntu-latest
+    services:
+      clair:
+        image: quay.io/projectquay/clair:latest
+        ports:
+          - 6060:6060
+          - 6061:6061
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.22"
-
-      - name: Install clairctl
+      - name: Install clairctl (binary)
         run: |
-          go install github.com/quay/clair/v4/cmd/clairctl@latest
-          echo "$HOME/go/bin" >> $GITHUB_PATH
+          curl -L https://github.com/quay/clair/releases/download/v4.7.0/clairctl-linux-amd64 -o clairctl
+          chmod +x clairctl
+          sudo mv clairctl /usr/local/bin/
 
-      - name: Start Clair (combo mode with Postgres)
-        run: |
-          git clone https://github.com/quay/clair.git
-          cd clair
-          docker compose -f docker-compose.yaml up -d
-
-      - name: Wait for Clair Matcher to be ready
+      - name: Wait for Clair API
         run: |
           for i in {1..30}; do
-            STATUS=$(curl -s http://localhost:6060/health | jq -r '.status // empty')
-            if [ "$STATUS" = "ok" ]; then
-              echo "✅ Clair Matcher is ready!"
+            if curl -s http://localhost:6060/ > /dev/null; then
+              echo "✅ Clair API is ready!"
               exit 0
             fi
-            echo "⏳ Waiting for Clair Matcher... ($i/30)"
+            echo "⏳ Waiting for Clair API... ($i/30)"
             sleep 10
           done
-          echo "❌ Matcher not ready in time" >&2
+          echo "❌ Clair API did not start in time"
           exit 1
 
       - name: Scan image with Clair
